[WPA-5314]: Fix chat layout (overflow issue)

--- a/src/app/private/features/chat/chat.component.scss
+++ b/src/app/private/features/chat/chat.component.scss
@@ -7,7 +7,7 @@
 }
 
 .page-content {
-  height: 100%;
+  height: calc(100vh - #{$topbar-height});
 }
 
 #left-panel {
